fixed header and content alignment on authenticated user pages

--- a/public/user-sidemenu/styles.css
+++ b/public/user-sidemenu/styles.css
@@ -214,7 +214,7 @@
   
   position: relative;
   background: #e4e9f7;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   left: 260px;
   width: calc(100% - 260px);
   transition: all 0.5s ease;
